--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,18 @@ keywords = ["interpreter", "scripting"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["async"]
+async = ["futures", "tokio"]
+
+
 [dependencies]
-futures = "0.3"
+futures = { version = "0.3", optional = true }
 log = "0.4"
 pest = "2"
 pest_derive = "2"
 petgraph = "0.8"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["full"], optional = true }
 
 [dev-dependencies]
 env_logger = "0.11"
