--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,5 +31,6 @@ tokio = { version = "1", features = ["full"], optional = true }
 
 [dev-dependencies]
 env_logger = "0.11"
-reqwest = { version = "0.12", features = ["rustls-tls"] }
+hyper = { version = "1", features = ["full"] }
+hyper-util = { version = "0.1", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
