--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,20 +17,25 @@ keywords = ["interpreter", "scripting"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["async"]
-async = ["futures", "tokio"]
 
 
 [dependencies]
-futures = { version = "0.3", optional = true }
+futures = { version = "0.3" }
 log = "0.4"
+parking_lot = "0.12"
 pest = "2"
 pest_derive = "2"
 petgraph = "0.8"
-tokio = { version = "1", features = ["full"], optional = true }
+
 
 [dev-dependencies]
+criterion = "0.3"
 env_logger = "0.11"
 hyper = { version = "1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
+
+
+[[bench]]
+name = "vm_benchmark"
+harness = false
