feat: reinstruduce non-async

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,19 +17,20 @@ keywords = ["interpreter", "scripting"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-
+default = ["async"]
+async = [ "futures", "parking_lot" ]
 
 [dependencies]
-futures = { version = "0.3" }
+futures = { version = "0.3", optional = true }
 log = "0.4"
-parking_lot = "0.12"
+parking_lot = { version = "0.12", optional = true }
 pest = "2"
 pest_derive = "2"
 petgraph = "0.8"
 
 
 [dev-dependencies]
-criterion = "0.3"
+criterion = "0.6"
 env_logger = "0.11"
 hyper = { version = "1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
