--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "evalit"
-version = "0.1.1"
+version = "0.2.0-beta.0"
 edition = "2024"
 authors = ["zzzdong <kuwater@163.com>"]
 license = "MIT"
